--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-reated by https://www.gitignore.io/api/sbt,scala,intellij
+
+# Created by https://www.gitignore.io/api/sbt,scala,intellij
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
